Prepare design environment

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,6 @@
 platform = espressif32
 board = az-delivery-devkit-v4
 framework = espidf
+extra_scripts = build-upload-monitor.py
+monitor_filters = direct
+monitor_speed = 115200
