--- a/platformio.ini
+++ b/platformio.ini
@@ -15,3 +15,4 @@ framework = espidf
 extra_scripts = build-upload-monitor.py
 monitor_filters = direct
 monitor_speed = 115200
+build_flags = -Llib/bsec -llibalgobsec
