Tune sdk config
 * Debloat
 * Use larger partition side
 * Set correct chip size
 * Enable 802.11r
 * Bump minimal chip rev

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,3 +16,4 @@ extra_scripts = build-upload-monitor.py
 monitor_filters = direct
 monitor_speed = 115200
 build_flags = -Llib/bsec -llibalgobsec
+board_build.partitions = partitions_singleapp_large.csv
