storage: Prepare bsec algo state storage
To enhance BSEC library performance across uC reboots learned algorithm
state should be preserved. Otherwise IAQ will be unavailable/inaccurate
for several days.

To fix this introduce dedicated nvs partition for storing learned algorithm
state. Do some reorganization while at it.

Actual implementation will be done later.

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,5 +16,5 @@ extra_scripts = build-upload-monitor.py
 monitor_filters = direct
 monitor_speed = 115200
 build_flags = -Llib/bsec -llibalgobsec
-board_build.partitions = partitions_singleapp_large.csv
+board_build.partitions = src/storage/partitions.csv
 upload_speed = 921600
